# result_code

./: CMakeLists.txt  README.md  main.cc  main.cpp  result.h  will_fail.cpp
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
